fix socials cutoff

--- a/src/css/nav.scss
+++ b/src/css/nav.scss
@@ -46,7 +46,7 @@ nav {
 		}
 	}
 
-	@media(min-width: 1500px) {
+	@media(min-width: 1570px) {
 		padding-left: calc(50vw - 775px);
 		width: calc(100vw - 25px - (50vw - 775px));
 
